--- a/Lab3/burgerapp/pom.xml
+++ b/Lab3/burgerapp/pom.xml
@@ -17,6 +17,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <spring.version>5.0.6.RELEASE</spring.version>
+        <spring.security.version>5.0.6.RELEASE</spring.security.version>
         <servlet.version>3.1.0</servlet.version>
         <h2.version>1.4.197</h2.version>
         <hibernate.version>5.3.1.Final</hibernate.version>
@@ -65,7 +66,17 @@
             <artifactId>lombok</artifactId>
             <version>1.18.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+            <version>${spring.security.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
